src/main/java/antlr/FactorioScriptParser.java
package antlr;
// Generated from FactorioScript.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FactorioScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMPILERSIGN=1, STANDARD=2, ALIAS=3, ALIASASSIGN=4, IF=5, ELSEIF=6, ELSE=7, 
		BRACKET_OPEN=8, BRACKET_CLOSE=9, BRACE_OPEN=10, BRACE_CLOSE=11, ASTERISK=12, 
		SLASH=13, PLUS=14, MINUS=15, POWER=16, MODULO=17, EQUAL=18, NOTEQUAL=19, 
		GREATER=20, LOWER=21, GREATEREQUAL=22, LOWEREQUAL=23, ASSIGN=24, NUMBER=25, 
		VAR=26, WS=27;
	public static final int
		RULE_statementList = 0, RULE_statement = 1, RULE_statementCompiler = 2, 
		RULE_statementAssign = 3, RULE_statementIf = 4, RULE_expression = 5, RULE_condition = 6;
	public static final String[] ruleNames = {
		"statementList", "statement", "statementCompiler", "statementAssign", 
		"statementIf", "expression", "condition"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'#'", null, null, "'=>'", null, null, null, "'('", "')'", "'{'", 
		"'}'", "'*'", "'/'", "'+'", "'-'", "'^'", "'%'", "'=='", "'!='", "'>'", 
		"'<'", "'>='", "'<='", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMPILERSIGN", "STANDARD", "ALIAS", "ALIASASSIGN", "IF", "ELSEIF", 
		"ELSE", "BRACKET_OPEN", "BRACKET_CLOSE", "BRACE_OPEN", "BRACE_CLOSE", 
		"ASTERISK", "SLASH", "PLUS", "MINUS", "POWER", "MODULO", "EQUAL", "NOTEQUAL", 
		"GREATER", "LOWER", "GREATEREQUAL", "LOWEREQUAL", "ASSIGN", "NUMBER", 
		"VAR", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FactorioScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FactorioScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatementListContext extends ParserRuleContext {
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
	 
		public StatementListContext() { }
		public void copyFrom(StatementListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultipleStatementListContext extends StatementListContext {
		public StatementContext s;
		public StatementListContext sl;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public MultipleStatementListContext(StatementListContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterMultipleStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitMultipleStatementList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitMultipleStatementList(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleStatementListContext extends StatementListContext {
		public StatementContext s;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SingleStatementListContext(StatementListContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterSingleStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitSingleStatementList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitSingleStatementList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statementList);
		try {
			setState(18);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new MultipleStatementListContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(14);
				((MultipleStatementListContext)_localctx).s = statement();
				setState(15);
				((MultipleStatementListContext)_localctx).sl = statementList();
				}
				break;
			case 2:
				_localctx = new SingleStatementListContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(17);
				((SingleStatementListContext)_localctx).s = statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementCompilerContext statementCompiler() {
			return getRuleContext(StatementCompilerContext.class,0);
		}
		public StatementAssignContext statementAssign() {
			return getRuleContext(StatementAssignContext.class,0);
		}
		public StatementIfContext statementIf() {
			return getRuleContext(StatementIfContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(23);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMPILERSIGN:
				enterOuterAlt(_localctx, 1);
				{
				setState(20);
				statementCompiler();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(21);
				statementAssign();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(22);
				statementIf();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementCompilerContext extends ParserRuleContext {
		public StatementCompilerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementCompiler; }
	 
		public StatementCompilerContext() { }
		public void copyFrom(StatementCompilerContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CompilerAliasContext extends StatementCompilerContext {
		public Token varOld;
		public Token varAlias;
		public TerminalNode COMPILERSIGN() { return getToken(FactorioScriptParser.COMPILERSIGN, 0); }
		public TerminalNode ALIAS() { return getToken(FactorioScriptParser.ALIAS, 0); }
		public TerminalNode ALIASASSIGN() { return getToken(FactorioScriptParser.ALIASASSIGN, 0); }
		public List<TerminalNode> VAR() { return getTokens(FactorioScriptParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(FactorioScriptParser.VAR, i);
		}
		public CompilerAliasContext(StatementCompilerContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterCompilerAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitCompilerAlias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitCompilerAlias(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompilerStandardContext extends StatementCompilerContext {
		public Token varLeft;
		public Token varRight;
		public TerminalNode COMPILERSIGN() { return getToken(FactorioScriptParser.COMPILERSIGN, 0); }
		public TerminalNode STANDARD() { return getToken(FactorioScriptParser.STANDARD, 0); }
		public TerminalNode ALIASASSIGN() { return getToken(FactorioScriptParser.ALIASASSIGN, 0); }
		public List<TerminalNode> VAR() { return getTokens(FactorioScriptParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(FactorioScriptParser.VAR, i);
		}
		public CompilerStandardContext(StatementCompilerContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterCompilerStandard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitCompilerStandard(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitCompilerStandard(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementCompilerContext statementCompiler() throws RecognitionException {
		StatementCompilerContext _localctx = new StatementCompilerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statementCompiler);
		try {
			setState(35);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new CompilerStandardContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(25);
				match(COMPILERSIGN);
				setState(26);
				match(STANDARD);
				setState(27);
				match(ALIASASSIGN);
				setState(28);
				((CompilerStandardContext)_localctx).varLeft = match(VAR);
				setState(29);
				((CompilerStandardContext)_localctx).varRight = match(VAR);
				}
				break;
			case 2:
				_localctx = new CompilerAliasContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				match(COMPILERSIGN);
				setState(31);
				match(ALIAS);
				setState(32);
				((CompilerAliasContext)_localctx).varOld = match(VAR);
				setState(33);
				match(ALIASASSIGN);
				setState(34);
				((CompilerAliasContext)_localctx).varAlias = match(VAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementAssignContext extends ParserRuleContext {
		public StatementAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementAssign; }
	 
		public StatementAssignContext() { }
		public void copyFrom(StatementAssignContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddStatementAssignContext extends StatementAssignContext {
		public Token var;
		public ExpressionContext expr;
		public TerminalNode PLUS() { return getToken(FactorioScriptParser.PLUS, 0); }
		public TerminalNode ASSIGN() { return getToken(FactorioScriptParser.ASSIGN, 0); }
		public TerminalNode VAR() { return getToken(FactorioScriptParser.VAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AddStatementAssignContext(StatementAssignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterAddStatementAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitAddStatementAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitAddStatementAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubStatementAssignContext extends StatementAssignContext {
		public Token var;
		public ExpressionContext expr;
		public TerminalNode MINUS() { return getToken(FactorioScriptParser.MINUS, 0); }
		public TerminalNode ASSIGN() { return getToken(FactorioScriptParser.ASSIGN, 0); }
		public TerminalNode VAR() { return getToken(FactorioScriptParser.VAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SubStatementAssignContext(StatementAssignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterSubStatementAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitSubStatementAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitSubStatementAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OverwriteStatementAssignContext extends StatementAssignContext {
		public Token var;
		public ExpressionContext expr;
		public TerminalNode ASSIGN() { return getToken(FactorioScriptParser.ASSIGN, 0); }
		public TerminalNode VAR() { return getToken(FactorioScriptParser.VAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OverwriteStatementAssignContext(StatementAssignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterOverwriteStatementAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitOverwriteStatementAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitOverwriteStatementAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementAssignContext statementAssign() throws RecognitionException {
		StatementAssignContext _localctx = new StatementAssignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statementAssign);
		try {
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new OverwriteStatementAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				((OverwriteStatementAssignContext)_localctx).var = match(VAR);
				setState(38);
				match(ASSIGN);
				setState(39);
				((OverwriteStatementAssignContext)_localctx).expr = expression(0);
				}
				break;
			case 2:
				_localctx = new AddStatementAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				((AddStatementAssignContext)_localctx).var = match(VAR);
				setState(41);
				match(PLUS);
				setState(42);
				match(ASSIGN);
				setState(43);
				((AddStatementAssignContext)_localctx).expr = expression(0);
				}
				break;
			case 3:
				_localctx = new SubStatementAssignContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				((SubStatementAssignContext)_localctx).var = match(VAR);
				setState(45);
				match(MINUS);
				setState(46);
				match(ASSIGN);
				setState(47);
				((SubStatementAssignContext)_localctx).expr = expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementIfContext extends ParserRuleContext {
		public StatementIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementIf; }
	 
		public StatementIfContext() { }
		public void copyFrom(StatementIfContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfElseStatementContext extends StatementIfContext {
		public TerminalNode IF() { return getToken(FactorioScriptParser.IF, 0); }
		public List<TerminalNode> BRACKET_OPEN() { return getTokens(FactorioScriptParser.BRACKET_OPEN); }
		public TerminalNode BRACKET_OPEN(int i) {
			return getToken(FactorioScriptParser.BRACKET_OPEN, i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> BRACKET_CLOSE() { return getTokens(FactorioScriptParser.BRACKET_CLOSE); }
		public TerminalNode BRACKET_CLOSE(int i) {
			return getToken(FactorioScriptParser.BRACKET_CLOSE, i);
		}
		public List<TerminalNode> BRACE_OPEN() { return getTokens(FactorioScriptParser.BRACE_OPEN); }
		public TerminalNode BRACE_OPEN(int i) {
			return getToken(FactorioScriptParser.BRACE_OPEN, i);
		}
		public List<StatementListContext> statementList() {
			return getRuleContexts(StatementListContext.class);
		}
		public StatementListContext statementList(int i) {
			return getRuleContext(StatementListContext.class,i);
		}
		public List<TerminalNode> BRACE_CLOSE() { return getTokens(FactorioScriptParser.BRACE_CLOSE); }
		public TerminalNode BRACE_CLOSE(int i) {
			return getToken(FactorioScriptParser.BRACE_CLOSE, i);
		}
		public TerminalNode ELSE() { return getToken(FactorioScriptParser.ELSE, 0); }
		public IfElseStatementContext(StatementIfContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterIfElseStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitIfElseStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitIfElseStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStatementContext extends StatementIfContext {
		public TerminalNode IF() { return getToken(FactorioScriptParser.IF, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(FactorioScriptParser.BRACKET_OPEN, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(FactorioScriptParser.BRACKET_CLOSE, 0); }
		public TerminalNode BRACE_OPEN() { return getToken(FactorioScriptParser.BRACE_OPEN, 0); }
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode BRACE_CLOSE() { return getToken(FactorioScriptParser.BRACE_CLOSE, 0); }
		public IfStatementContext(StatementIfContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfElseIfElseStatementContext extends StatementIfContext {
		public TerminalNode IF() { return getToken(FactorioScriptParser.IF, 0); }
		public List<TerminalNode> BRACKET_OPEN() { return getTokens(FactorioScriptParser.BRACKET_OPEN); }
		public TerminalNode BRACKET_OPEN(int i) {
			return getToken(FactorioScriptParser.BRACKET_OPEN, i);
		}
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> BRACKET_CLOSE() { return getTokens(FactorioScriptParser.BRACKET_CLOSE); }
		public TerminalNode BRACKET_CLOSE(int i) {
			return getToken(FactorioScriptParser.BRACKET_CLOSE, i);
		}
		public List<TerminalNode> BRACE_OPEN() { return getTokens(FactorioScriptParser.BRACE_OPEN); }
		public TerminalNode BRACE_OPEN(int i) {
			return getToken(FactorioScriptParser.BRACE_OPEN, i);
		}
		public List<StatementListContext> statementList() {
			return getRuleContexts(StatementListContext.class);
		}
		public StatementListContext statementList(int i) {
			return getRuleContext(StatementListContext.class,i);
		}
		public List<TerminalNode> BRACE_CLOSE() { return getTokens(FactorioScriptParser.BRACE_CLOSE); }
		public TerminalNode BRACE_CLOSE(int i) {
			return getToken(FactorioScriptParser.BRACE_CLOSE, i);
		}
		public TerminalNode ELSEIF() { return getToken(FactorioScriptParser.ELSEIF, 0); }
		public TerminalNode ELSE() { return getToken(FactorioScriptParser.ELSE, 0); }
		public IfElseIfElseStatementContext(StatementIfContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).enterIfElseIfElseStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactorioScriptListener ) ((FactorioScriptListener)listener).exitIfElseIfElseStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactorioScriptVisitor ) return ((FactorioScriptVisitor<? extends T>)visitor).visitIfElseIfElseStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementIfContext statementIf() throws RecognitionException {
		StatementIfContext _localctx = new StatementIfContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statementIf);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new IfElseIfElseStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(IF);
				setState(51);
				match(BRACKET_OPEN);
				setState(52);
				condition();
				setState(53);
				match(BRACKET_CLOSE);
				setState(54);
				match(BRACE_OPEN);
				setState(55);
				statementList();
				setState(56);
				match(BRACE_CLOSE);
				setState(57);
				match(ELSEIF);
				setState(58);
				match(BRACKET_OPEN);
				setState(59);
				condition();
				setState(60);
				match(BRACKET_CLOSE);
				setState(61);
				match(BRACE_OPEN);
				setState(62);
				statementList();
				setState(63);
				match(BRACE_CLOSE);
				setState(64);
				match(ELSE);
				setState(65);
				match(BRACKET_OPEN);
				setState(66);
				condition();
				setState(67);
				match(BRACKET_CLOSE);
				setState(68);
				match(BRACE_OPEN);
				setState(69);
				statementList();
				setState(70);
				match(BRACE_CLOSE);
				}
				break;
			case 2:
				_localctx = new IfElseStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(IF);
				setState(73);
				match(BRACKET_OPEN);
				setState(74);
				condition();
				setState(75);
				match(BRACKET_CLOSE);
				setState(76);
				match(BRACE_OPEN);
				setState(77);
				statementList();
				setState(78);
				match(BRACE_CLOSE);
				setState(79);
				match(ELSE);
				setState(80);
				match(BRACKET_OPEN);
				setState(81);
				condition();
				setState(82);
				match(BRACKET_CLOSE);
				setState(83);
				match(BRACE_OPEN);
				setState(84);
				statementList();
				setState(85);
				match(BRACE_CLOSE);
				}
				break;
			case 3:
				_localctx = new IfStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(IF);
				setState(88);
				match(BRACKET_OPEN);
				setState(89);
				condition();
				setState(90);
				match(BRACKET_CLOSE);
				setState(91);
				match(BRACE_OPEN);
				setState(92);
				statementList();
				setState(93);
				match(BRACE_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
